Fixed misalignment and app logo

--- a/bookFinder/src/app/home/home.page.scss
+++ b/bookFinder/src/app/home/home.page.scss
@@ -8,12 +8,12 @@ p {
 }
 
 ion-content{    
-    --background: url('/assets/Background1.png') no-repeat center/cover fixed;
+    --background: url('/assets/Background2.png') no-repeat center/cover fixed;
 }
 
 ion-header {
     //--ion-background-color: #3b3652;
-    --ion-background-color: #312d44;
+    --ion-background-color: #262748;
     text-align: center;
 }
 
@@ -23,14 +23,14 @@ ion-item{
     --padding-end: 25px;
     ion-input{
         --background: #ffffff;
-        border: solid 1px #333092;
+        border: solid 1px #06123a;
         border-radius: 5px;
         --padding-start: 10px;
     }
     ion-select{
         max-width: 100%;
         background-color: #ffffff;
-        border: solid 1px #333092;
+        border: solid 1px #06123a;
         border-radius: 5px;
         --padding-end: 7px;
     }
